--- a/amazon/index.css
+++ b/amazon/index.css
@@ -9,14 +9,63 @@ span{
 
     color: rgb(255, 255, 255);
 }
+
+
 a:hover{
     color: rgb(255, 255, 255);
 }
 
 div.fondoazul{
-    background-color:#179bc6;
+    background-color:#0060AA;
      border: 1px;
       margin:auto;
-    padding:250px;
+    padding:50px;
 }
+
+.btcrgmas {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #333333;
+    color: white;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+    border-radius: 5px;
+  }
+  
+  .btcrgmas:hover {
+    background-color:rgb(79, 75, 75);
+  }
+
+
+  .btig{
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #E72B37;
+    color: white;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+    border-radius: 5px;
+  }
+  
+  .btig:hover {
+    background-color:rgb(29, 153, 178);
+  }
+
+
+  .menuHIFA {
+    width: 100%;
+    height: 50px; 
+    background-color: #3e989f; 
+    display: flex;
+    justify-content: space-around; 
+    align-items: center;
+  }
+  
+  .btHIFA {
+    text-decoration: none;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+  }
+
 
